Add storage class

--- a/deployments/helm/kubeview/templates/service-account.yaml
+++ b/deployments/helm/kubeview/templates/service-account.yaml
@@ -36,6 +36,7 @@ rules:
       - persistentvolumeclaims
       - resourcequotas
       - services
+      - storageclasses
     verbs: ["get", "list"]
   - nonResourceURLs: ["*"]
     verbs: ["get", "list"]
