--- a/deployments/helm/kubeview/templates/service-account.yaml
+++ b/deployments/helm/kubeview/templates/service-account.yaml
@@ -36,6 +36,9 @@ rules:
       - persistentvolumeclaims
       - resourcequotas
       - services
+    verbs: ["get", "list"]
+  - apiGroups: ["storage.k8s.io"]
+    resources:
       - storageclasses
     verbs: ["get", "list"]
   - nonResourceURLs: ["*"]
