--- a/.dockerignore
+++ b/.dockerignore
@@ -1,30 +1,3 @@
-# Standard stuff
-Dockerfile*
-**/*Dockerfile*
-docker-compose*
-.dockerignore
-.git
-.gitignore
-readme.md
-**/readme.md
-**/LICENSE
-.vscode/
-
-# Node stuff
-node_modules
-**/node_modules
-**/*.log
-
-# Dotenv secrets!
+**/node_modules/
 **/.env
-
-# Outputs, binaries etc
-**/bin/
-**/obj/
-**/dist/
-
-# Project specific folders
-junk/
-deployments/
-build/
-old/
+**/server
