--- a/.editorconfig
+++ b/.editorconfig
@@ -15,7 +15,6 @@ indent_size = 2
 max_line_length = 120
 
 [Makefile]
-indent_size = 4
 indent_style = tab
 
 [*.md]
@@ -25,5 +24,5 @@ trim_trailing_whitespace = false
 indent_style = tab
 indent_size = 8
 
-[*.{yml,json,eslintrc}]
+[*.{yml,json,eslintrc,yaml}]
 indent_size = 2
