--- a/deployments/helm/kubeview/Chart.yaml
+++ b/deployments/helm/kubeview/Chart.yaml
@@ -1,13 +1,17 @@
 apiVersion: v1
-appVersion: "0.1.9"
+appVersion: "0.1.13"
 name: kubeview
 description: Kubernetes cluster visualiser and visual explorer
-version: 0.1.9
+version: 0.1.13
 
-icon: https://github.com/benc-uk/kubeview/blob/master/web/client/public/favicon.png
-home: https://github.com/benc-uk/kubeview
+icon: https://github.com/REBELinBLUE/kubeview/blob/master/web/client/public/favicon.png
+home: https://github.com/REBELinBLUE/kubeview
+
 sources:
-  - https://github.com/benc-uk/kubeview
+  - https://github.com/REBELinBLUE/kubeview
+
 maintainers:
   - name: Ben Coleman
     url: benco.io
+  - name: Stephen Ball
+    url: rebelinblue.com
