Tweak error handling

--- a/deployments/helm/kubeview/templates/service-account.yaml
+++ b/deployments/helm/kubeview/templates/service-account.yaml
@@ -36,6 +36,7 @@ rules:
       - persistentvolumeclaims
       - resourcequotas
       - services
+      - serviceaccounts
     verbs: ["get", "list"]
   - apiGroups: ["storage.k8s.io"]
     resources:
