Add ability to toggle different types of resources

--- a/deployments/helm/kubeview/values.yaml
+++ b/deployments/helm/kubeview/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: bencuk/kubeview
+  repository: rebelinblue/kubeview
   tag: latest
   pullPolicy: IfNotPresent
 
