--- a/.editorconfig
+++ b/.editorconfig
@@ -10,7 +10,7 @@ indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
 
-[*.js,*.vue]
+[*.{js,vue}]
 indent_size = 2
 max_line_length = 120
 
