--- a/deployments/helm/kubeview/values.yaml
+++ b/deployments/helm/kubeview/values.yaml
@@ -40,3 +40,10 @@ nodeSelector: {}
 tolerations: []
 
 affinity: {}
+
+filter_namespaces: []
+  # - production
+  # - staging
+  # - uat
+  # - qa
+  # - development
