Add ability to hide namespaces instead of only showing specific namespaces

--- a/deployments/helm/kubeview/templates/configmap.yaml
+++ b/deployments/helm/kubeview/templates/configmap.yaml
@@ -7,5 +7,6 @@ metadata:
 data:
   env.js: |-
     (function() {
-      window.FILTER_NAMESPACES = {{ .Values.filter_namespaces | toJson }}
+      window.INCLUDE_NAMESPACES = {{ .Values.namespaces.show | toJson }}
+      window.REMOVE_NAMESPACES = {{ .Values.namespaces.hide | toJson }}
     }());
